--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     </properties>
 
 	<organization>
-		<name>My Name</name>
+		<name>Mathieu Ouellet</name>
 		<url>https://github.com/mouellet/ClosableAccordion/</url>
 	</organization>
     
