--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <groupId>org.vaadin.addons</groupId>
     <artifactId>closableaccordion</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.1</version>
+    <version>1.1.2</version>
     <name>ClosableAccordion Add-on</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <vaadin.version>7.2.0</vaadin.version>
+        <vaadin.version>7.2.3</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 
 		<!-- ZIP Manifest fields -->
@@ -87,6 +87,12 @@
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-client</artifactId>
             <version>${vaadin.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-testbench</artifactId>
+            <version>4.0.0.alpha1</version>
             <scope>provided</scope>
         </dependency>
 		<!-- This can be replaced with TestNG or some other test framework supported by the surefire plugin -->
